# rag-experiment

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  DEMO_SCRIPT.md  KICKOFF_PROMPT.md  README.md  pyproject.toml
.claude/: settings.local.json
data/eval/: eval_set.example.json  eval_set.json
prompts/: classify_query.md  grounded_qa.md  verifier.md
reference/: conversation_summary.md
src/: api.py  eval.py  guardrails.py  ingest.py  llm.py  orchestrator.py  rag.py  schemas.py
tests/: test_smoke.py
ui/: app.py
