[project]
name = "rag-experiment"
version = "0.1.0"
description = "GenAI RAG showcase over SEC 10-K filings — minimum viable subset of a production reference architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "streamlit>=1.40",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
